<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">boiler app</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello_world</string>
    <string name="button_string">Press Me!</string>
    <string name="name">Name</string>
    <string name="comment">Comment</string>
    <string name="other">Other</string>
    <string name="addcomment">Comment!</string>
    <string name="blank"></string>
    <string name="user_name"/>
    <string name="user_pass"/>
    <string name="user_email"/>
    <string name="user_name_hint">username</string>
    <string name="user_pass_hint">password</string>
    <string name="user_email_hint">email</string>
    <string name="create_account">Not Bubblin\' Yet?</string>
    <string name="login_button_hint">login</string>
    <string name="new_account_button_hint">new account</string>
    <string name="title_activity_share">Add to Bubble</string>
    <string name="add_tag">Add to Existing Tags</string>
    <string name="create_tag">Create a New Tag</string>   

</resources>
