<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/bubble_splash" />

    <EditText
        android:id="@+id/user_emailIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/user_email_hint"
        android:inputType="text|textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/user_passIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/user_emailIn"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/user_pass_hint"
        android:inputType="text|textPassword" />

    <EditText
        android:id="@+id/user_nameIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/user_passIn"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="29dp"
        android:ems="10"
        android:hint="@string/user_name_hint"
        android:inputType="text" />

    <Button
        android:id="@+id/new_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:text="new account" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/new_account_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="login" />

</RelativeLayout>
